Added new classes, improved yaml handling, new yaml files